Fixed mobile alignment

--- a/src/app/content-modal/components/modal/modal.component.sass
+++ b/src/app/content-modal/components/modal/modal.component.sass
@@ -63,10 +63,10 @@
 	padding: 10px
 
 .details
-	padding-right: 20px
+	margin-right: 40px
 
 .improvements
-	padding-left: 20px
+
 
 .date
 	text-align: center
